--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,5 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<script src="https://www.paypal.com/sdk/js?client-id=AZUeTQPNmewl46f4w0l1f3r1CwYi5gO4uyFhDA6XR5EfU3hRo2zuAxhEqeTkv-lGhTm8DaMSdEZreyMZ&currency=USD"></script>
 </html>
